PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
? ? ??? 2002, Version 4.3.0
- Fixed a security bug in the bundled MySQL library. (Georg, Stefan)
- ATTENTION! "make install" will *by default* install the CLI SAPI binary in 
  {PREFIX}/bin/php. If you don't disable the CGI binary, it will be
  installed as {PREFIX}/bin/php-cgi.
- Removed extensions: (Jan, Jani, Sebastian)
  . ext/aspell
  . ext/ccvs
  . ext/cybercash
  . ext/icap
  . sapi/fastcgi
  . sapi/fhttpd
- Moved extensions to PECL (http://pear.php.net/): (James, Derick)
  . ext/vpopmail
  . ext/cybermut
- Fixed bug #21039 (crash when not supplying an IV to mcrypt_generic_init).
  (Derick)
- Fixed bug #20936 (openssl_pkey_get was broken). (jeroen@derks.it, Wez)
- Fixed bug #20927 (wordwrap crash). (Ilia)
- Fixed bug #20796 (when register_globals is on & arrays with same names are
  passed via get/post/cookie the data inside $_GET/$_POST/$_COOKIE can would be
  corrupted). (Ilia)
- Fixed bug #20725 (if the upload directory cannot be written to, the POST data
  after the uploaded file is lost). (Ilia)
- Fixed bug #20865 (array_key_exists() fails to find NULL key). (Ilia)
- Fixed bug #20812 (ftp_get returned NULL on success, instead of TRUE). (Ilia)
- Fixed bug #20785 (crash when using pdf_open_memory_image() to load a
  true-color image). (Ilia)
- Fixed a crash when converting between true-color images (png/jpeg) and
  gd1/gd2 image formats, png/jpeg -> gd1/gd2 -> png/jpeg conversion now
  works correctly. (Ilia, (Pierre-Alain Joye).
- Fixed a memory leak in the bundled GD library inside 
  gdImageTrueColorToPalette(). (Ilia)
- Fixed bug #12776 (array_walk crash). (Moriyoshi)
- Fixed bug #20934 (htmlspecialchars returns latin1 from UTF-8). (Moriyoshi)
- Fixed bugs #20270, #15702, #18600 (segfaults in ext/java). (Tony J. White)
- Made bcmath extension thread safe. (Sander)