@@ -1,6 +1,8 @@
 PHP 4                                                                      NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ? ? ??? 2002, Version 4.3.0
+- Aliased dba_popen() to dba_open() until 4.3.1 when persistent STDIO streams
+  are introduced. (Andrei)
 - Fixed a security bug in the bundled MySQL library. (Georg, Stefan)
 - ATTENTION! "make install" will *by default* install the CLI SAPI binary in 
   {PREFIX}/bin/php. If you don't disable the CGI binary, it will be
